clang/test/BSC/Negative/OwnedStruct/destructor/invalid_destructor_name.cbs
// RUN: %clang_cc1 -verify %s

struct B
{

};

_Owned struct A {    
 ~B(A this) { // expected-error {{expected the _Owned struct name after '~' to name the enclosing _Owned struct}}
  }

};

_Owned struct C<T> {    
 ~C<T>(C<T> this) { // expected-error {{expected the _Owned struct name after '~' to name the enclosing _Owned struct}}
  }

};

_Owned struct D<T> {    
 ~B(D<T> this) { // expected-error {{expected the _Owned struct name after '~' to name the enclosing _Owned struct}}
  }

};